[package]
name = "discord_inviter_misskey"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[profile.release]
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["native_tls_backend"]
native_tls_backend = [
    "reqwest/native-tls",
    "serenity/native_tls_backend",
    "async-tungstenite/tokio-native-tls",
]
rustls_backend = [
    "reqwest/rustls-tls",
    "serenity/rustls_backend",
    "async-tungstenite/tokio-rustls-webpki-roots",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
async-tungstenite = "0.23"
futures = "0.3.28"

log = { version = "0.4", features = ["max_level_info"] }
moko256_systemd_stdio_logger = { git = "https://github.com/moko256/moko256_systemd_stdio_logger_rust.git", tag = "v1.0.1" }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "rt", "time"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["gzip", "json"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "http", "gateway", "model"]
